<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>470</width>
    <height>374</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>QPickit 2.1</string>
  </property>
  <property name="windowIcon">
   <iconset resource="img/img.qrc">
    <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <widget class="QTabWidget" name="mainTab">
      <property name="currentIndex">
       <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="icon">
        <iconset resource="img/img.qrc">
         <normaloff>:/processor.png</normaloff>:/processor.png</iconset>
       </attribute>
       <attribute name="title">
        <string>&amp;MCU</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0" colspan="2">
         <widget class="QPushButton" name="hexFileButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>43</height>
           </size>
          </property>
          <property name="text">
           <string>&amp;HEX File...</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/browse.png</normaloff>:/browse.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>32</width>
            <height>32</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="1" column="0" colspan="2">
         <widget class="QLineEdit" name="hexFileLineEdit"/>
        </item>
        <item row="2" column="0">
         <widget class="QPushButton" name="programButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>43</height>
           </size>
          </property>
          <property name="text">
           <string>&amp;Burn</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/burn.png</normaloff>:/burn.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>32</width>
            <height>32</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QPushButton" name="contactButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>43</height>
           </size>
          </property>
          <property name="text">
           <string>&amp;Contact</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/contact.png</normaloff>:/contact.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>32</width>
            <height>32</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="3" column="0">
         <widget class="QPushButton" name="resetButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>43</height>
           </size>
          </property>
          <property name="text">
           <string>&amp;Reset</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/refresh.png</normaloff>:/refresh.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>32</width>
            <height>32</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
         <widget class="QPushButton" name="eraseButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>43</height>
           </size>
          </property>
          <property name="text">
           <string>&amp;Erase</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/eraser.png</normaloff>:/eraser.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>32</width>
            <height>32</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="4" column="0">
         <widget class="QPushButton" name="readButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>43</height>
           </size>
          </property>
          <property name="text">
           <string>Rea&amp;d</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/read.png</normaloff>:/read.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>32</width>
            <height>32</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="4" column="1">
         <widget class="QPushButton" name="verifyButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>43</height>
           </size>
          </property>
          <property name="text">
           <string>&amp;Verify</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/verify.png</normaloff>:/verify.png</iconset>
          </property>
          <property name="iconSize">
           <size>
            <width>32</width>
            <height>32</height>
           </size>
          </property>
         </widget>
        </item>
        <item row="5" column="0" colspan="2">
         <widget class="QPushButton" name="aboutButton">
          <property name="text">
           <string>&amp;About</string>
          </property>
          <property name="icon">
           <iconset resource="img/img.qrc">
            <normaloff>:/information.png</normaloff>:/information.png</iconset>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="icon">
        <iconset resource="img/img.qrc">
         <normaloff>:/log.png</normaloff>:/log.png</iconset>
       </attribute>
       <attribute name="title">
        <string>&amp;Log viewer</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="0">
         <widget class="QPlainTextEdit" name="logTextArea">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_4">
       <attribute name="icon">
        <iconset resource="img/img.qrc">
         <normaloff>:/port.png</normaloff>:/port.png</iconset>
       </attribute>
       <attribute name="title">
        <string>&amp;PICKit 2</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_4">
        <item row="2" column="0">
         <widget class="QPushButton" name="setNewIDButton">
          <property name="text">
           <string>Set new ID</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QLineEdit" name="setNewIDLineEdit">
          <property name="text">
           <string>PICKIT2</string>
          </property>
          <property name="maxLength">
           <number>14</number>
          </property>
         </widget>
        </item>
        <item row="1" column="0" colspan="2">
         <widget class="QPlainTextEdit" name="pickitInfoTextArea">
          <property name="enabled">
           <bool>true</bool>
          </property>
          <property name="acceptDrops">
           <bool>false</bool>
          </property>
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="0" column="0" colspan="2">
         <widget class="QPushButton" name="detectPickitButton">
          <property name="text">
           <string>Detect programmer</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_3">
       <attribute name="icon">
        <iconset resource="img/img.qrc">
         <normaloff>:/configuration.png</normaloff>:/configuration.png</iconset>
       </attribute>
       <attribute name="title">
        <string>&amp;Settings</string>
       </attribute>
       <widget class="QRadioButton" name="defaultThemeRadioButton">
        <property name="geometry">
         <rect>
          <x>50</x>
          <y>30</y>
          <width>100</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>&amp;Default</string>
        </property>
       </widget>
       <widget class="QRadioButton" name="customThemeRadioButton">
        <property name="geometry">
         <rect>
          <x>50</x>
          <y>50</y>
          <width>161</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>&amp;Custom</string>
        </property>
        <property name="checked">
         <bool>true</bool>
        </property>
       </widget>
       <widget class="QLabel" name="themeLabel">
        <property name="geometry">
         <rect>
          <x>20</x>
          <y>10</y>
          <width>59</width>
          <height>14</height>
         </rect>
        </property>
        <property name="text">
         <string>Theme</string>
        </property>
       </widget>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="img/img.qrc"/>
  <include location="img/img.qrc"/>
  <include location="img/img.qrc"/>
 </resources>
 <connections/>
</ui>
